--- a/main.html
+++ b/main.html
@@ -1,16 +1,104 @@
 <!DOCTYPE html>
-
-<html>
-
-<head>
-	<link rel="stylesheet" href="styles.css">
-</head>
-
-<body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
-</body>
-
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="style.css" />
+    <title>Bootstrap Form</title>
+  </head>
+  <body>
+    <div class="container test">
+      <h1 class="text-center pt-5">Internship Form</h1>
+      <form class="was-validated" action="/action_page.php">
+        <div class="row pt-4">
+          <div class="col">
+            <label for="first-name-input" class="form-label">First Name</label>
+            <input
+              type="text"
+              class="form-control"
+              id="first-name-input"
+              required
+            />
+            <div class="invalid-feedback">First name required!</div>
+          </div>
+          <div class="col">
+            <label for="last-name-input" class="form-label">Last Name</label>
+            <input
+              type="text"
+              class="form-control"
+              id="last-name-input"
+              required
+            />
+            <div class="invalid-feedback">Last name required!</div>
+          </div>
+          <div class="col">
+            <label for="email-input" class="form-label">Email Address</label>
+            <input
+              type="email"
+              class="form-control"
+              id="email-input"
+              placeholder="xyz@abc.com"
+              required
+            />
+            <div class="invalid-feedback">Email required!</div>
+          </div>
+        </div>
+        <div class="row pt-4">
+          <div class="col">
+            <label for="college-input" class="form-label">College</label>
+            <input
+              type="text"
+              class="form-control x"
+              id="college-input"
+              required
+            />
+            <div class="invalid-feedback">Please provide a valid college</div>
+          </div>
+          <div class="col">
+            <label for="grad-year-select" class="form-label">Graduation Year</label>
+            <select class="form-select" id="grad-year-select" required>
+              <option value="" disabled selected hidden>Choose..</option>
+              <option value="2020">2020</option>
+              <option>2021</option>
+              <option>2022</option>
+              <option>2023</option>
+            </select>
+            <div class="invalid-feedback">
+              Please select a valid graduation year
+            </div>
+          </div>
+          <div class="col">
+            <label for="roll-no-input" class="form-label">Roll No.</label>
+            <input
+              type="text"
+              class="form-control"
+              id="roll-no-input"
+              required
+            />
+            <div class="invalid-feedback">Please provide a valid Roll no.</div>
+          </div>
+        </div>
+        <div class="form-check">
+          <input
+            type="checkbox"
+            class="form-check-input"
+            id="conditions-checkbox"
+            name="remember"
+            required
+          />
+          <label for="conditions-checkbox" class="form-check-label pt-3"
+            >Agree to terms and conditions</label
+          >
+          <div class="invalid-feedback">You must agree before submitting</div>
+        </div>
+        <button type="submit" class="btn btn-primary y">Submit form</button>
+      </form>
+    </div>
+  </body>
 </html>
